Job template popup alignment issue fixed.

--- a/phresco-framework-web/src/main/webapp/themes/default/css/Helios/style.css
+++ b/phresco-framework-web/src/main/webapp/themes/default/css/Helios/style.css
@@ -2636,6 +2636,17 @@ html>body tbody.scrollContent {
 	padding-left: 15px !important;	
 }
 
+.type_test li a {
+    padding-top: 6px;
+}
+
+#jobConfigure table td select {
+    margin-bottom: 0px;
+}
+
+#jobConfigure table td input[type="radio"], #jobConfigure table td input[type="checkbox"] {
+    margin: -3px 3px 0 !important;
+}
 
 
 /* *************************************************************** STYLES FOR CI-CON_DELIVERY PAGE ************************************************************************************ */
@@ -2770,6 +2781,12 @@ html>body tbody.scrollContent {
 	border-radius: 4px;
 	padding: 1% 3%;
 	width: 100%;
+}
+
+#jobConfigure {
+	height: 490px;
+    overflow-y: auto;
+    top: 3px;
 }
 
 .ci_envtable .popuptextarea input[type="checkbox"] {
